--- a/my-app/src/Components/Header-Edit/headerEdit.css
+++ b/my-app/src/Components/Header-Edit/headerEdit.css
@@ -51,3 +51,15 @@
     color: #00bc77;
     padding-top: 5px;
 }
+
+@media (max-width: 768px) {
+    .navigation{
+        display: block;
+        justify-content: center;
+    }
+
+    .infoNav{
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
