--- a/my-app/src/Pages/Sign-In/signIn.css
+++ b/my-app/src/Pages/Sign-In/signIn.css
@@ -4,6 +4,7 @@
 
 .main {
     flex: 1;
+    padding-top: 30px;
 }
 
 .sign-in-button {
@@ -25,6 +26,8 @@
     margin: 0 auto;
     margin-top: 3rem;
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .sign-in-icon {
